--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
-
+     <div class="btn right">&Gt;</div>
+     <div class="btn left">&Lt;</div>
   <script src="https://code.jquery.com/jquery-3.2.1.js"
   integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
   crossorigin="anonymous"></script>
